[gd_scene load_steps=3 format=2]

[ext_resource path="res://GunUpgrade.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[node name="GunUpgrade" type="Area2D"]
rotation = 1.5708
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="Look" type="Polygon2D" parent="."]
color = Color( 0.792557, 0.792969, 0.740311, 1 )
antialiased = true
invert_border = 5.0
polygon = PoolVector2Array( 19.9999, -20.0001, -20.0001, -19.9999, -19.9999, 20.0001, 20.0001, 19.9999 )

[node name="Border" type="Polygon2D" parent="."]
color = Color( 0.628906, 0.612938, 0.550293, 1 )
antialiased = true
invert_enable = true
invert_border = 5.0
polygon = PoolVector2Array( 19.9999, -20.0001, -20.0001, -19.9999, -19.9999, 20.0001, 20.0001, 19.9999 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Lifetime" type="Tween" parent="."]

[node name="Pick" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_GunUpgrade_area_entered"]
[connection signal="tween_completed" from="Lifetime" to="." method="_on_Lifetime_tween_completed"]
[connection signal="tween_completed" from="Pick" to="." method="_on_Pick_tween_completed"]
